--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
    </div>
 </body>
 <script>
-   if (1 < 2) {
-      console.log('ONE')
-   } else {
-      console.log(3)
+   function one() {
+      console.log('First Commit')
    }
 </script>
 
